✨ feat: 개설된 모임이 가장 많은 공연 TOP5 조회 기능 추가 및 관련 API 구현